tests/fail/extra_parameters.rs
use wgpu_shader_checker::include_wgsl;

fn main() {
    include_wgsl!("as;ljghnadk", iawjofi. -0q298o, aola8 * ijkomlacxdkjsdlk)
}
